# vector-db-bench

./: README.md  USAGE.md
.github/workflows/: render-leaderboard.yml
agent/src/: bench_tools.rs  main.rs
leaderboard/gemini-3-pro-preview-turn-1/: Cargo.toml  agent_log.jsonl  eval_log.json  session_context.json
leaderboard/gemini-3-pro-preview-turn-1/benchmarks/: benchmark_001.json  benchmark_002.json  benchmark_003.json  benchmark_004.json  benchmark_005.json  benchmark_006.json  benchmark_007.json  benchmark_008.json  benchmark_009.json
leaderboard/gemini-3-pro-preview-turn-2/: Cargo.toml  agent_log.jsonl  eval_log.json  session_context.json
leaderboard/gemini-3-pro-preview-turn-3/: Cargo.toml  agent_log.jsonl  eval_log.json  session_context.json
leaderboard/gemini-3-pro-preview-turn-3/benchmarks/: benchmark_001.json  benchmark_002.json  benchmark_003.json  benchmark_004.json  benchmark_005.json  benchmark_006.json  benchmark_007.json  benchmark_008.json
leaderboard/gemini-3-pro-preview-turn-3/profiling/: report_001.txt  report_002.txt  report_003.txt  report_004.txt  report_005.txt  report_006.txt
leaderboard/gemini-3-pro-preview-turn-3/src/: db.rs
leaderboard/gemini-3-pro-preview-turn-3/src_best_qps/: db.rs  distance.rs
results/: google-gemini-3-pro-preview_20260219_192647.json  google-gemini-3-pro-preview_20260219_194226.json  google-gemini-3-pro-preview_20260219_195051.json  leaderboard.json
scripts/: generate_ground_truth.py  rebuild_leaderboard.py  render_leaderboard.py  run_eval.sh  test_generate_ground_truth.py
(+19 files in other folders)
